force-app/main/default/objects/AI_Assistant_Config__mdt/AI_Assistant_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Assistant Config</label>
    <pluralLabel>AI Assistant Configs</pluralLabel>
</CustomObject>