force-app/main/default/objects/AI_Assistant_Config__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <type>Url</type>
    <description>Gemini API endpoint URL</description>
</CustomField>