force-app/main/default/objects/AI_Assistant_Config__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Maximum tokens for API response</description>
</CustomField>