force-app/main/default/objects/AI_Assistant_Config__mdt/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>Model Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Gemini model name (e.g., gemini-2.5-flash)</description>
</CustomField>