force-app/main/default/objects/AI_Assistant_Config__mdt/fields/SF_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Client_Id__c</fullName>
    <label>SF Client ID</label>
    <type>Text</type>
    <length>255</length>
    <description>OAuth client ID for self-org REST API queries (e.g., PlatformCLI)</description>
</CustomField>