force-app/main/default/objects/AI_Assistant_Config__mdt/fields/SF_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>SF_Refresh_Token__c</fullName>
    <label>SF Refresh Token</label>
    <type>Text</type>
    <length>255</length>
    <description>OAuth refresh token for self-org REST API queries (bypasses 50K governor limit)</description>
</CustomField>