force-app/main/default/objects/AI_Assistant_Config__mdt/fields/Use_Structured_Planner__c.field-meta.xml
<CustomField>
    <fullName>Use_Structured_Planner__c</fullName>
    <label>Use Structured Planner</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, revenue-domain questions use the structured planner path instead of the full SOQL prompt. Feature flag for incremental rollout.</description>
</CustomField>